core service dev: http server response encoder override
