# api/core/v1/core.pb.validate.go
@@ -2038,38 +2038,11 @@ func (m *LoginReply) validate(all bool) error {
 
 	var errors []error
 
-	// no validation rules for Code
+	// no validation rules for Type
 
-	// no validation rules for Message
+	// no validation rules for Token
 
-	if all {
-		switch v := interface{}(m.GetData()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, LoginReplyValidationError{
-					field:  "Data",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, LoginReplyValidationError{
-					field:  "Data",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		}
-	} else if v, ok := interface{}(m.GetData()).(interface{ Validate() error }); ok {
-		if err := v.Validate(); err != nil {
-			return LoginReplyValidationError{
-				field:  "Data",
-				reason: "embedded message failed validation",
-				cause:  err,
-			}
-		}
-	}
+	// no validation rules for ExpiresAt
 
 	if len(errors) > 0 {
 		return LoginReplyMultiError(errors)
@@ -2589,10 +2562,6 @@ func (m *UserDetailReply) validate(all bool) error {
 	}
 
 	var errors []error
-
-	// no validation rules for Code
-
-	// no validation rules for Message
 
 	if all {
 		switch v := interface{}(m.GetData()).(type) {
