# openapi.yaml
@@ -309,13 +309,13 @@ components:
         LoginReply:
             type: object
             properties:
-                code:
-                    type: integer
-                    format: int32
-                message:
+                type:
                     type: string
-                data:
-                    $ref: '#/components/schemas/TokenInfo'
+                token:
+                    type: string
+                expiresAt:
+                    type: integer
+                    format: int64
         LoginRequest:
             type: object
             properties:
@@ -366,16 +366,6 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
-        TokenInfo:
-            type: object
-            properties:
-                type:
-                    type: string
-                token:
-                    type: string
-                expiresAt:
-                    type: integer
-                    format: int64
         UnregisterReply:
             type: object
             properties: {}
@@ -423,11 +413,6 @@ components:
         UserDetailReply:
             type: object
             properties:
-                code:
-                    type: integer
-                    format: int32
-                message:
-                    type: string
                 data:
                     $ref: '#/components/schemas/UserDetail'
         UserInfoUpdateReply:
